Fix select overlap for Ubuntu FF

--- a/src/app/css/CIQ_Seed.css
+++ b/src/app/css/CIQ_Seed.css
@@ -889,4 +889,9 @@ ciq-colorpicker {
 .chartContainer span {
 	box-sizing: content-box;
 }
+
+.chartContainer select {
+	box-sizing: border-box;
+}
+
 /* #endregion */
